tests/en/errors/this_outside.salam
// EXPECT: E014
struct S:
    v i32 = 0
end
func main:
    this.v = 1
end
